--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@nomicfoundation/hardhat-verify": "^1.0.4",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/hardhat-upgrades": "^2.0.1",
+    "@typechain/ethers-v6": "^0.4.3",
+    "@typechain/hardhat": "^8.0.3",
     "dotenv": "^16.3.1",
-    "ethers": "^6.6.4",
     "hardhat": "^2.17.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typechain": "^8.3.1"
+  },
+  "dependencies": {
+    "ethers": "^6.6.7"
   }
 }
